Make videos controllable

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   adjusted by the fish's acceleration. Moreover, in order to keep the movement of the fish as well as the simulation stable, the speed of the fish has been limited. 
 </p>
 <div align="middle">
-<video width="320" height="240" autoplay>
+<video width="320" height="240" control>
   <source src="images/fish_obstacles.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
@@ -107,7 +107,7 @@ After that, the predator enter's a "rest period" where it will temporarily not a
   <figcaption>A diagram depicting a predator's acceleration vector after detecting a fish.</figcaption>
 </div>
 <div align="middle">
-  <video width="320" height="240" autoplay>
+  <video width="400" height="400" control>
     <source src="images/predator_chase.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
